[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Anniversary.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/background.gd" type="Script" id=2]
[ext_resource path="res://scripts/playerai.gd" type="Script" id=4]
[ext_resource path="res://assets/runner.png" type="Texture" id=5]
[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=6]
[ext_resource path="res://assets/watermark.png" type="Texture" id=7]
[ext_resource path="res://assets/ground.png" type="Texture" id=9]

[sub_resource type="Environment" id=4]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 120.044, 119.979 )

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24.2912, 23.9346 )

[sub_resource type="DynamicFont" id=8]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=16]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -6.0
margin_right = 1.0
margin_bottom = -10.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="background" type="Node2D" parent="."]
position = Vector2( -42.5, 0 )
script = ExtResource( 2 )

[node name="ground" type="Sprite" parent="background"]
position = Vector2( -262.5, 2662.15 )
scale = Vector2( 17.0333, 16.1348 )
texture = ExtResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="background/ground"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/ground/StaticBody2D"]
position = Vector2( -0.763205, -0.0514048 )
shape = SubResource( 5 )

[node name="cieling" type="Sprite" parent="background/ground"]
position = Vector2( 3.17, -275.603 )
scale = Vector2( 1.01162, 0.924828 )
texture = ExtResource( 9 )

[node name="player" type="KinematicBody2D" parent="background"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 152.962, 692.513 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="background/player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/player/Area2D"]
position = Vector2( 250, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/player"]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="background/player"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="watermark" type="Sprite" parent="background"]
visible = false
self_modulate = Color( 1, 1, 1, 0.0823529 )
position = Vector2( 1125, 680 )
scale = Vector2( 0.3, 0.3 )
z_index = 22
texture = ExtResource( 7 )

[node name="Center" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -578.0
margin_top = -299.0
margin_right = 578.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="MarginContainer" parent="Center"]
margin_left = 71.0
margin_top = 3.0
margin_right = 1085.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Center/UI"]
margin_right = 1014.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Center/UI/VBoxContainer"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
margin_right = 1014.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 8 )
text = "Shape runner"
align = 1
valign = 1

[node name="score" type="Label" parent="Center/UI/VBoxContainer"]
margin_top = 144.0
margin_right = 1014.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 9 )
text = "Score     999"
align = 1
autowrap = true

[node name="best" type="Label" parent="Center/UI/VBoxContainer"]
margin_top = 219.0
margin_right = 1014.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 9 )
text = "Best Score     999"
align = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="Center/UI/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 294.0
margin_right = 1014.0
margin_bottom = 394.0
custom_constants/separation = 100

[node name="CenterContainer" type="CenterContainer" parent="Center/UI/VBoxContainer"]
margin_top = 398.0
margin_right = 1014.0
margin_bottom = 504.0

[node name="play" type="Button" parent="Center/UI/VBoxContainer/CenterContainer"]
modulate = Color( 1.1, 1.1, 1, 1 )
margin_left = 387.0
margin_right = 627.0
margin_bottom = 106.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "PLAY"
flat = true

[node name="HSeparator3" type="HSeparator" parent="Center/UI/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 508.0
margin_right = 1014.0
margin_bottom = 528.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Center/UI/VBoxContainer"]
margin_top = 532.0
margin_right = 1014.0
margin_bottom = 603.0
alignment = 1

[node name="settings" type="Button" parent="Center/UI/VBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 492.0
margin_bottom = 71.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Settings"
flat = true

[node name="VSeparator" type="VSeparator" parent="Center/UI/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 496.0
margin_right = 546.0
margin_bottom = 71.0
rect_min_size = Vector2( 50, 0 )

[node name="credits" type="Button" parent="Center/UI/VBoxContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 812.0
margin_bottom = 71.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Credits"
flat = true
[connection signal="area_entered" from="background/player/Area2D" to="background/player" method="_on_Area2D_area_entered"]
[connection signal="pressed" from="Center/UI/VBoxContainer/CenterContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Center/UI/VBoxContainer/HBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Center/UI/VBoxContainer/HBoxContainer/credits" to="." method="_on_credits_pressed"]
